[package]
name = "parcel"
version = "0.1.1"
authors = ["oskarbraten <oskarbraten@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.1"
glam = { version = "0.12.0", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }

[dependencies.schemars]
version = "0.8.0"
optional = true

[features]
json-schema = ["schemars"]